@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - Add substitution metrics from C2A qc check to the iseq_product_metrics
+   table
+
 release 6.20.0
  - Add a table for storing one of Illumina's XML files with
    run information, iseq_run_info.
